feat: site sections endpoint refactor
combined the 2 site sections endpoints into one with optional parameters,
removed the permission of an archaeo to make a site(only admin should be able to do it),
solved the logical error in the service when a user adds/deletes themselves from a site